Moved assets from external repo, migrated Pilgrim Ipsum off CodePen

--- a/index.html
+++ b/index.html
@@ -30,34 +30,34 @@
     <div class="columns">
       <div class="column">
         <a href="https://codepen.io/chaosharmonic/pen/japywX">
-        <img src="https://raw.githubusercontent.com/chaosharmonic/codepen-assets/master/Weather.png">
+        <img src="assets/weather.png">
           Local weather</a>
       </div>
       <div class="column">
         <a href="https://codepen.io/chaosharmonic/pen/GOGWpe">
-        <img src="https://raw.githubusercontent.com/chaosharmonic/codepen-assets/master/Twitch.png">
+        <img src="assets/twitch.png">
           Streamer Status</a>
       </div>
       <div class="column">
         <a href="https://codepen.io/chaosharmonic/pen/qVYRBr">
-        <img src="https://raw.githubusercontent.com/chaosharmonic/codepen-assets/master/Wikipedia%20Viewer.png">
+        <img src="assets/wiki.png">
           Wikipedia Viewer</a>
       </div>
     </div>
     <div class="columns">
       <div class="column">
           <a href="https://codepen.io/chaosharmonic/pen/XzVGJa">
-          <img src="https://raw.githubusercontent.com/chaosharmonic/codepen-assets/master/Plastic.png">
+          <img src="assets/plastic.png">
             Random quote machine</a>: generate and tweet a random quote from <em>Mean Girls</em>
             </div>
         <div class="column">
-          <a href="https://codepen.io/chaosharmonic/pen/BmLMoP">
-          <img src="https://raw.githubusercontent.com/chaosharmonic/codepen-assets/master/Pilgrim.png">
+          <a href="https://chaosharmonic.github.io/pilgrim-ipsum">
+          <img src="assets/pilgrim.png">
             Pilgrim Ipsum</a>: A lorem ipsum generator populated with quotes from <em>Scott Pilgrim</em>
             </div>
         <div class="column">
           <a href="https://codepen.io/chaosharmonic/pen/BmLMoP">
-          <img src="https://raw.githubusercontent.com/chaosharmonic/codepen-assets/master/Navi.png">
+          <img src="assets/navi.png">
             Navi Ipsum</a>: A lorem ipsum generator based on Navi from <em>The Ocarina of Time</em>
       </div>
     </div>
@@ -67,7 +67,7 @@
     <h3 id="contactHeader">Want to get in touch?</h3>
     <h3 id="icons">
       <a href="https://twitter.com/sierramicmic"><i class="fa fa-twitter icon-4x"></i></a>
-      <a href="https://chaosharmonic.github.com"><i class="fa fa-github icon-4x"></i></a>
+      <a href="https://github.com/chaosharmonic"><i class="fa fa-github icon-4x"></i></a>
       <a href="https://www.freecodecamp.org/chaosharmonic"><i class="fa fa-free-code-camp icon-4x"></i></a>
       <a href="https://codepen.io/chaosharmonic"><i class="fa fa-codepen icon-4x"></i></a>
       <a href="https://www.linkedin.com/in/smmorrissey"><i class="fa fa-linkedin icon-4x"></i></a>
