Added score counter, updated links

--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
 <div class="content" id="intro">
     <h1>Hey there! I'm Sean, and I write code.</h1>
 </div>
-<!-- </section> -->
 <div class="columns content" id="about">
   <div class="column marker">
     <h3 id="aboutHeader">About me:</h3>
   </div>
   <div class="column is-three-quarters">
-    <p>I'm a trained musician turned self-taught developer, using FreeCodeCamp, Udemy, and a few other resources. I started learning code to tackle some personal projects (a couple of which you'll see below), and found myself with a new obsession in the process. I currently have a working knowledge of HTML, CSS, JavaScript, Python, and Ruby. In the free time that I'm not spending on <em><a href="https://automatetheboringstuff.com/">Automate the Boring Stuff with Python</a></em> or Colt Steele's <a href="https://www.udemy.com/the-web-developer-bootcamp/">Web Developer Bootcamp</a>, I'm often found at the gym, playing DDR, or experimenting with <a href="http://sonic-pi.net/">Sonic Pi</a>. (You can actually find some covers I've done with it on my GitHub.)</p>
+    <p>I'm a trained musician turned self-taught developer, courtesy of FreeCodeCamp, Udemy, and a few other resources. I started learning code to tackle some personal projects (a couple of which you'll see below), and found myself with a new obsession in the process. I currently have a working knowledge of HTML, CSS, JavaScript, Python, and Ruby. In the free time that I'm not spending on <em><a href="https://automatetheboringstuff.com/">Automate the Boring Stuff with Python</a></em> or Colt Steele's <a href="https://www.udemy.com/the-web-developer-bootcamp/">Web Developer Bootcamp</a>, I'm often found at the gym, playing DDR, or experimenting with <a href="http://sonic-pi.net/">Sonic Pi</a>. (You can actually find some covers I've done with it on my GitHub.)</p>
     </div>
 </div>
 <div class="columns content" id="portfolio">
@@ -29,36 +28,30 @@
   <div class="column is-three-quarters">
     <div class="columns">
       <div class="column">
-        <a href="https://codepen.io/chaosharmonic/pen/japywX">
-        <img src="assets/weather.png">
-          Local weather</a>
+        <a href="https://chaosharmonic.github.io/weather">
+        <img src="assets/weather.png">Local weather</a>
       </div>
       <div class="column">
-        <a href="https://codepen.io/chaosharmonic/pen/GOGWpe">
-        <img src="assets/twitch.png">
-          Streamer Status</a>
+        <a href="https://chaosharmonic.github.io/twitch-status">
+        <img src="assets/twitch.png">Streamer status</a>
       </div>
       <div class="column">
-        <a href="https://codepen.io/chaosharmonic/pen/qVYRBr">
-        <img src="assets/wiki.png">
-          Wikipedia Viewer</a>
+        <a href="https://chaosharmonic.github.io/wiki-search">
+        <img src="assets/wiki.png">Wiki search</a>
       </div>
     </div>
     <div class="columns">
       <div class="column">
-          <a href="https://codepen.io/chaosharmonic/pen/XzVGJa">
-          <img src="assets/plastic.png">
-            Random quote machine</a>: generate and tweet a random quote from <em>Mean Girls</em>
-            </div>
-        <div class="column">
-          <a href="https://chaosharmonic.github.io/pilgrim-ipsum">
-          <img src="assets/pilgrim.png">
-            Pilgrim Ipsum</a>: A lorem ipsum generator populated with quotes from <em>Scott Pilgrim</em>
-            </div>
-        <div class="column">
-          <a href="https://codepen.io/chaosharmonic/pen/BmLMoP">
-          <img src="assets/navi.png">
-            Navi Ipsum</a>: A lorem ipsum generator based on Navi from <em>The Ocarina of Time</em>
+        <a href="https://chaosharmonic.github.io/score-keeper">
+        <img src="assets/score.png">ScoreKeeper</a>
+      </div>
+      <div class="column">
+        <a href="https://chaosharmonic.github.io/pilgrim-ipsum">
+        <img src="assets/pilgrim.png">Pilgrim Ipsum</a>
+      </div>
+      <div class="column">
+        <a href="https://chaosharmonic.github.io/navi-ipsum">
+        <img src="assets/navi.png">Navi Ipsum</a>
       </div>
     </div>
   </div>
