--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
   <div class="column is-three-quarters">
     <div class="columns">
       <div class="column">
+        <a href="https://chaosharmonic.github.io/simon">
+        <img src="assets/simon.png">Simon</a>
+      </div>
+      <div class="column">
         <a href="https://chaosharmonic.github.io/weather">
         <img src="assets/weather.png">Local weather</a>
       </div>
@@ -35,12 +39,12 @@
         <a href="https://chaosharmonic.github.io/twitch-status">
         <img src="assets/twitch.png">Streamer status</a>
       </div>
+    </div>
+    <div class="columns">
       <div class="column">
         <a href="https://chaosharmonic.github.io/wiki-search">
         <img src="assets/wiki.png">Wiki search</a>
       </div>
-    </div>
-    <div class="columns">
       <div class="column">
         <a href="https://chaosharmonic.github.io/score-keeper">
         <img src="assets/score.png">ScoreKeeper</a>
@@ -49,12 +53,9 @@
         <a href="https://chaosharmonic.github.io/pilgrim-ipsum">
         <img src="assets/pilgrim.png">Pilgrim Ipsum</a>
       </div>
-      <div class="column">
-        <a href="https://chaosharmonic.github.io/navi-ipsum">
-        <img src="assets/navi.png">Navi Ipsum</a>
-      </div>
     </div>
   </div>
+</div>
 </div>
 <div class="content" id="contact">
     <h3 id="contactHeader">Want to get in touch?</h3>
