Added Pomodoro and calculator projects

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="has-navbar-fixed-top">
+<html>
   <head>
     <meta charset="utf-8">
     <title>Portfolio</title>
@@ -12,6 +12,14 @@
 
 <div class="content" id="intro">
     <h1>Hey there! I'm Sean, and I write code.</h1>
+    <h3 id="icons">
+      <a href="https://twitter.com/sierramicmic"><i class="fa fa-twitter icon-4x"></i></a>
+      <a href="https://github.com/chaosharmonic"><i class="fa fa-github icon-4x"></i></a>
+      <a href="https://www.freecodecamp.org/chaosharmonic"><i class="fa fa-free-code-camp icon-4x"></i></a>
+      <a href="https://codepen.io/chaosharmonic"><i class="fa fa-codepen icon-4x"></i></a>
+      <a href="https://www.linkedin.com/in/smmorrissey"><i class="fa fa-linkedin icon-4x"></i></a>
+      <a href="mailto:chaosharmonic@gmail.com"><i class="fa fa-envelope icon-4x"></i></a>
+    </h3>
 </div>
 <div class="columns content" id="about">
   <div class="column marker">
@@ -28,9 +36,19 @@
   <div class="column is-three-quarters">
     <div class="columns">
       <div class="column">
+        <a href="https://chaosharmonic.github.io/calc">
+        <img src="assets/calc.png">Calculator</a>
+      </div>
+      <div class="column">
+        <a href="https://chaosharmonic.github.io/pomodoro">
+        <img src="assets/pomodoro.png">Pomodoro clock</a>
+      </div>
+      <div class="column">
         <a href="https://chaosharmonic.github.io/simon">
         <img src="assets/simon.png">Simon</a>
       </div>
+    </div>
+    <div class="columns">
       <div class="column">
         <a href="https://chaosharmonic.github.io/weather">
         <img src="assets/weather.png">Local weather</a>
@@ -39,17 +57,17 @@
         <a href="https://chaosharmonic.github.io/twitch-status">
         <img src="assets/twitch.png">Streamer status</a>
       </div>
-    </div>
-    <div class="columns">
       <div class="column">
         <a href="https://chaosharmonic.github.io/wiki-search">
         <img src="assets/wiki.png">Wiki search</a>
       </div>
-      <div class="column">
+    </div>
+    <div class="columns">
+      <div class="column is-one-third">
         <a href="https://chaosharmonic.github.io/score-keeper">
         <img src="assets/score.png">ScoreKeeper</a>
       </div>
-      <div class="column">
+      <div class="column is-one-third">
         <a href="https://chaosharmonic.github.io/pilgrim-ipsum">
         <img src="assets/pilgrim.png">Pilgrim Ipsum</a>
       </div>
@@ -57,28 +75,6 @@
   </div>
 </div>
 </div>
-<div class="content" id="contact">
-    <h3 id="contactHeader">Want to get in touch?</h3>
-    <h3 id="icons">
-      <a href="https://twitter.com/sierramicmic"><i class="fa fa-twitter icon-4x"></i></a>
-      <a href="https://github.com/chaosharmonic"><i class="fa fa-github icon-4x"></i></a>
-      <a href="https://www.freecodecamp.org/chaosharmonic"><i class="fa fa-free-code-camp icon-4x"></i></a>
-      <a href="https://codepen.io/chaosharmonic"><i class="fa fa-codepen icon-4x"></i></a>
-      <a href="https://www.linkedin.com/in/smmorrissey"><i class="fa fa-linkedin icon-4x"></i></a>
-      <a href="mailto:chaosharmonic@gmail.com"><i class="fa fa-envelope icon-4x"></i></a>
-    </h3>
-</div>
-
-<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
-  <div class="navbar-brand">
-    <a class="navbar-item" href="#about">About
-    </a>
-    <a class="navbar-item" href="#portfolio">Portfolio
-    </a>
-    <a class="navbar-item" href="#contact">Contact
-    </a>
-  </div>
-</nav>
 
   </body>
 </html>
