--- a/index.html
+++ b/index.html
@@ -20,20 +20,23 @@
       <a href="https://www.linkedin.com/in/smmorrissey"><i class="fa fa-linkedin icon-4x"></i></a>
       <a href="mailto:chaosharmonic@gmail.com"><i class="fa fa-envelope icon-4x"></i></a>
     </h3>
+
 </div>
 <div class="columns content" id="about">
   <div class="column marker">
     <h3 id="aboutHeader">About me:</h3>
+    <img src="assets/blazer.jpg">
   </div>
-  <div class="column is-three-quarters">
-    <p>I'm a trained musician turned self-taught developer, courtesy of FreeCodeCamp, Udemy, and a few other resources. I started learning code to tackle some personal projects (a couple of which you'll see below), and found myself with a new obsession in the process. I currently have a working knowledge of HTML, CSS, JavaScript, Python, and Ruby. In the free time that I'm not spending on <em><a href="https://automatetheboringstuff.com/">Automate the Boring Stuff with Python</a></em> or Colt Steele's <a href="https://www.udemy.com/the-web-developer-bootcamp/">Web Developer Bootcamp</a>, I'm often found at the gym, playing DDR, or experimenting with <a href="http://sonic-pi.net/">Sonic Pi</a>. (You can actually find some covers I've done with it on my GitHub.)</p>
+  <div id="aboutText" class="column is-four-fifths">
+    <p>I'm a trained musician, turned one-man tech support desk, turned self-taught developer - the latter being courtesy of <a href="https://www.freecodecamp.org/">FreeCodeCamp</a>, Udemy (I'd highly recommend <em><a href="https://automatetheboringstuff.com/">Automate the Boring Stuff with Python</a></em>, or Colt Steele's <a href="https://www.udemy.com/the-web-developer-bootcamp/">Web Developer Bootcamp</a>), and a few other resources. Currently, I have a working knowledge of HTML, CSS, JavaScript, Python, and Ruby. I started learning code to tackle some personal projects (a couple of which you'll see below), and instead I just got more and more obsessed with building things.  Currently, I have a working knowledge of HTML, CSS, JavaScript, Python, and Ruby.</p>
+    <p>In my free time, I'm typically <em>still</em> obsessing over personal progress. I spend a lot of time at the at the gym, I've recently been experimenting with <a href="http://sonic-pi.net/">Sonic Pi</a> (you can actually find some covers written for it on my GitHub), I played my first-ever DJ gig a couple months back, and while I do still spend a lot of time playing video games, lately it's mostly been DDR, because it gives me an excuse to avoid running. (Traditionally, my habits of choice have been JRPGs and Tetris; these days, when I'm picking up a controller it's typically for a few <span id="strike">hours</span> rounds of Smash.) When I'm <em>genuinely</em> just trying to have fun, I'll typically be at a nightclub, or toying around with DIY cocktails.</p>
     </div>
 </div>
 <div class="columns content" id="portfolio">
   <div class="column marker">
     <h3 id="portfolioHeader">Here are some projects I've worked on:</h3>
   </div>
-  <div class="column is-three-quarters">
+  <div class="column is-four-fifths">
     <div class="columns">
       <div class="column">
         <a href="https://chaosharmonic.github.io/calc">
@@ -67,9 +70,13 @@
         <a href="https://chaosharmonic.github.io/score-keeper">
         <img src="assets/score.png">ScoreKeeper</a>
       </div>
-      <div class="column is-one-third">
+      <div class="column">
         <a href="https://chaosharmonic.github.io/pilgrim-ipsum">
         <img src="assets/pilgrim.png">Pilgrim Ipsum</a>
+      </div>
+      <div class="column">
+        <a href="https://chaosharmonic.github.io/inspire-me">
+        <img src="assets/inspire.png">InspireMe</a>
       </div>
     </div>
   </div>
