Added new project

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
   <div class="column is-four-fifths">
     <div class="columns">
       <div class="column">
+        <a href="https://chaosharmonic.github.io/t3">
+        <img src="assets/t3.png">Tic Tac Toe</a>
+      </div>
+      <div class="column">
         <a href="https://chaosharmonic.github.io/calc">
         <img src="assets/calc.png">Calculator</a>
       </div>
@@ -46,12 +50,12 @@
         <a href="https://chaosharmonic.github.io/pomodoro">
         <img src="assets/pomodoro.png">Pomodoro clock</a>
       </div>
+    </div>
+    <div class="columns">
       <div class="column">
         <a href="https://chaosharmonic.github.io/simon">
         <img src="assets/simon.png">Simon</a>
       </div>
-    </div>
-    <div class="columns">
       <div class="column">
         <a href="https://chaosharmonic.github.io/weather">
         <img src="assets/weather.png">Local weather</a>
@@ -60,15 +64,11 @@
         <a href="https://chaosharmonic.github.io/twitch-status">
         <img src="assets/twitch.png">Streamer status</a>
       </div>
-      <div class="column">
-        <a href="https://chaosharmonic.github.io/wiki-search">
-        <img src="assets/wiki.png">Wiki search</a>
-      </div>
     </div>
     <div class="columns">
       <div class="column is-one-third">
-        <a href="https://chaosharmonic.github.io/score-keeper">
-        <img src="assets/score.png">ScoreKeeper</a>
+        <a href="https://chaosharmonic.github.io/wiki-search">
+        <img src="assets/wiki.png">Wiki search</a>
       </div>
       <div class="column">
         <a href="https://chaosharmonic.github.io/pilgrim-ipsum">
